# core

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPERS.md  README.md  start.sh
.claude/agents/: devops-engineer.md  go-mcp-developer.md  laravel-developer.md  qa-engineer.md  studio-developer.md  supabase-developer.md
.claude/rules/: 01-plan-first.md  02-multi-feature-todos.md  03-plan-review.md  04-clarify-unknowns.md  05-interrupt-handling.md  06-definition-of-done.md  07-component-ui-design.md  08-package-scaffolding.md  09-small-wins.md  10-parallel-execution.md  11-client-first.md  12-markdown-first-responses.md  13-model-selection.md  14-a2ui-visualization.md  15-multi-provider-agents.md  16-config-persistence.md
.github/: FUNDING.yml  labeler.yml
.github/instructions/: studio-composition-patterns.instructions.md  studio-e2e-tests.instructions.md  studio-error-handling.instructions.md  studio-shadcn-components.instructions.md  studio-telemetry.instructions.md  studio-testing.instructions.md
.github/workflows/: deploy.yml  lint.yml  test.yml
.plans/: 2026-03-30-dynamic-reader-scripts.md  2026-03-30-twin-bridge-chrome-extension.md  2026-03-31-desktop-ui-rebuild.md
.requests/: 2026-03-28-integrations-settings.md  2026-03-28-orchestra-pages-style-refactor.md  2026-03-28-studio-pro-features.md  2026-03-28-studio-ui-round3-fixes.md  2026-03-28-supabase-laravel-package.md  2026-03-29-os-vision-control.md  2026-03-30-digital-twin-local-rag.md  2026-03-30-mcp-context-command.md  2026-03-30-orch-orchestrator-agent-sync.md
apps/design-system/: next.config.mjs
apps/docs/: instrumentation-client.ts  middleware.ts  next.config.mjs  sentry.edge.config.ts  sentry.server.config.ts
apps/studio/: .env  Dockerfile  next.config.js  package.json  tailwind.config.js
apps/twin-bridge/: manifest.json
apps/www/: middleware.test.ts
arts/sounds/: README.md
deploy/: .env.example  Caddyfile  deploy.sh  docker-compose.orchestra.yml  setup.sh
deploy/supervisor/: caddy.conf  laravel-scheduler.conf  laravel-worker.conf  mcp-server.conf
desktop/: ICON-SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mcp_bridge.rs  workspace.rs
desktop/src-tauri/src/agent_spawn/: accounts.rs  chain.rs  mod.rs
desktop/src-tauri/src/agent_spawn/providers/: apple.rs  claude.rs  gemini.rs  grok.rs  mod.rs  ollama.rs  openai.rs
desktop/src-tauri/src/bridge/: mcp_host.rs  mod.rs
desktop/src-tauri/src/cloud/: auth.rs  db.rs  mod.rs  realtime.rs  storage.rs
desktop/src-tauri/src/digital_twin/: alerts.rs  dispatch.rs  listener.rs  mod.rs  ws_bridge.rs
desktop/src-tauri/src/mcp_server/: helpers.rs  http.rs  mod.rs  server.rs  stdio.rs  tools.rs  types.rs
desktop/src-tauri/src/rag/: indexer.rs  mod.rs  query.rs  store.rs
desktop/src-tauri/src/tunnel/: mod.rs  reconnect.rs  register.rs  types.rs
desktop/src-tauri/src/vision/: accessibility.rs  capture.rs  input.rs  mod.rs  ocr.rs  window.rs
docker/: docker-compose.yml
mcp-server/: Dockerfile  go.mod  go.sum
scripts/: chrome-debug.sh  create-admin.sh  start-mcp.sh
spec/: PRD.md  deploy.sh
web/: .env.example  .gitignore  .mcp.json  composer.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+1805 files in other folders)
