[package]
name = "orchestra-desktop"
version = "0.1.0"
description = "Orchestra Desktop — AI-powered company operating system"
authors = ["Fady Mondy <info@3x1.io>"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orchestra_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
jsonwebtoken = "9"
base64 = "0.22"
image = "0.25"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
